package behavioral.observer.ca6_playerdata;

public interface PlayerDataListener {
    void listen(PlayerData data);
}
